fix(exporter): bound the private-identity check to notes that actually have direct targets
Three findings from the final whole-branch review:

- prepareAfterIdentityCheck built PrivateNoteIdentityIndex.from(vaultReader)
  unconditionally, even for a note with zero links. That index does a full
  vault walk and reads every note's body, so preparing an unrelated,
  link-free note could be blocked by an unrelated unreadable/corrupted
  private note elsewhere in the vault -- a bounded-request violation
  (ADM-05). Now skipped entirely when privateTargetStems is empty.
- FilesystemVaultReader.readSource throws NoSuchElementException (not
  UncheckedIOException) when a listed path vanishes between listing and
  reading -- a real TOCTOU race. That exception type now routes through
  the same privateIdentityLookupFailure blocked-response path as an I/O
  failure, instead of escaping prepare() uncaught.
- LinkResolutionOutcome.resolved(...) discarded LinkResolver's
  source-ordered LinkedHashSet via Set.copyOf, so a diagnostic naming the
  first invalid target wasn't deterministically in source order. Fixed by
  preserving insertion order through an unmodifiable LinkedHashSet.

Also corrects tasks.md's three commit-step checkboxes (2.6, 3.11, 4.4),
which were still unchecked despite the commits existing -- OpenSpec now
reports this change 28/28 complete.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01SQQnAAtGSrt1AizcAzJ8tQ